<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   
	<item
		android:id="@+id/search_contact"
        android:orderInCategory="100"
        android:title="Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>
	
	<item
        android:id="@+id/action_selectAll"
        android:orderInCategory="100"
        android:title="@string/select_all"
        app:showAsAction="never" />
	<item
        android:id="@+id/action_deselect"
        android:orderInCategory="100"
        android:title="@string/deselect"
        app:showAsAction="never" />
	<item
        android:id="@+id/action_select_invert"
        android:orderInCategory="100"
        android:title="@string/select_invert"
        app:showAsAction="never" />
	
	<item
        android:id="@+id/action_select_systemapp"
        android:orderInCategory="100"
        android:title="@string/select_systemapp"
        app:showAsAction="never" />
	<item
        android:id="@+id/action_not_select_systemapp"
        android:orderInCategory="100"
        android:title="@string/not_select_systemapp"
        app:showAsAction="never" />
	
	<item
        android:id="@+id/action_select_userapp"
        android:orderInCategory="100"
        android:title="@string/select_userapp"
        app:showAsAction="never" />
	<item
        android:id="@+id/action_not_select_userapp"
        android:orderInCategory="100"
        android:title="@string/not_select_userapp"
        app:showAsAction="never" />

	<item
        android:id="@+id/action_select_homeapp"
        android:orderInCategory="100"
        android:title="@string/select_homeapp"
        app:showAsAction="never" />
	<item
        android:id="@+id/action_not_select_homeapp"
        android:orderInCategory="100"
        android:title="@string/not_select_homeapp"
        app:showAsAction="never" />
	
	<item
        android:id="@+id/action_select_inputmethodapp"
        android:orderInCategory="100"
        android:title="@string/select_inputmethodapp"
        app:showAsAction="never" />
	<item
        android:id="@+id/action_not_select_inputmethodapp"
        android:orderInCategory="100"
        android:title="@string/not_select_inputmethodapp"
        app:showAsAction="never" />
	
	
	
	<item
        android:id="@+id/action_select_locked"
        android:orderInCategory="100"
        android:title="@string/select_locked"
        app:showAsAction="never" />
	<item
        android:id="@+id/action_not_select_locked"
        android:orderInCategory="100"
        android:title="@string/not_select_locked"
        app:showAsAction="never" />

	<item
        android:id="@+id/action_select_ordinary_lock"
        android:orderInCategory="100"
        android:title="@string/select_ordinary_lock"
        app:showAsAction="never" />
	<item
        android:id="@+id/action_not_select_ordinary_lock"
        android:orderInCategory="100"
        android:title="@string/not_select_ordinary_lock"
        app:showAsAction="never" />
	
	
	<item
        android:id="@+id/action_select_eternal_lock"
        android:orderInCategory="100"
        android:title="@string/select_eternal_lock"
        app:showAsAction="never" />
	<item
        android:id="@+id/action_not_select_eternal_lock"
        android:orderInCategory="100"
        android:title="@string/not_select_eternal_lock"
        app:showAsAction="never" />
	
	<item
        android:id="@+id/action_select_canstartapp"
        android:orderInCategory="100"
        android:title="@string/select_canfromhomestartapp"
        app:showAsAction="never" />
	<item
        android:id="@+id/action_not_select_canstartapp"
        android:orderInCategory="100"
        android:title="@string/not_select_canfromhomestartapp"
        app:showAsAction="never" />
	
	<item
        android:id="@+id/action_select_unknownapp"
        android:orderInCategory="100"
        android:title="@string/select_unknownapp"
        app:showAsAction="never" />
	<item
        android:id="@+id/action_not_select_unknownapp"
        android:orderInCategory="100"
        android:title="@string/not_select_unknownapp"
        app:showAsAction="never" />
</menu>
